test/compile_fail/program_declarations_require_decl_fields.zig
const shift = @import("shift");

comptime {
    _ = shift.Program(.{
        .bad = struct {}{},
    }, struct {
        pub fn body(_: anytype) !i32 {
            return 0;
        }
    });
}
